 - Correct type for checkAgainst.  - Staticify flags that are not used outside the file scope.

PR:		bin/193471
Submitted by:	Robert Sprowson <webpages sprow.co.uk>
MFC after:	2 weeks

Former-commit-id: 506ba04cfa330d2bf4d9ef17ed719be0f4fd0d08